assets/css/pokemon.css
/* list */

.imgholder {
  height: 170px;
  width: 200px;
  min-width: 200px;

  position: relative;
}

.imgtypeicon {
  position: absolute;
  width: 120px;
  height: auto;

  opacity: 15%;

  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.imgcontent {
  position: absolute;
  width: 150px;
  height: auto;

  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);

}

/* singles */
.top-circle-img-container {
  position: absolute;
  height: 300px;
}

.circle {
  position: absolute;
  width: 900px;
  height: 900px;
  border-radius: 450px;

  top: -600px;
  left: 50%;
  transform: translate(-50%);
}

.circle img {
  width: 200px;
  position: absolute;
  bottom: 50px;
  left: 50%;
  transform: translate(-50%);
  opacity: 30%;
}

.prev-next-pokemon {
  width: 50px;
  height: 50px;
  position: relative;
}

.prev-next-pokemon img {
  width: 70%;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.single-img-container {
  height: 300px;
}

.single-img-container img {
  width: 300px;
}

.pokemon-content {
  margin-top: 300px;
}

.single-type-icon {
  width: 30px;
  height: 30px;
  position: relative;
}

.single-type-icon img {
  width: 50%;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.icon-img-container {
  max-width: 100px;
}

.small-icon {
  width: auto;
  max-height: 80px;
}

/* sm */
@media (max-width: 767.98px) {
  .imgholder {
    height: 150px;
    width: 150px;
    min-width: 150px;
  }

  .imgtypeicon {
    width: 100px;
  }

  .imgcontent {
    width: 130px;
  }

  .circle {
    top: -650px;
  }

  .circle img {
    width: 180px;
    bottom: 30px;
  }

  .single-img-container {
    height: 250px;
  }

  .single-img-container img {
    width: 250px;
  }

  .pokemon-content {
    margin-top: 250px;
  }
}

/* xs */
@media (max-width: 575.98px) {}

